1.2-kripken/build/testalpha.test.log
[1mtestalpha.c:290:26: [0m[0;1;31merror: [0m[1mno member named 'alpha' in 'struct SDL_PixelFormat'[0m
        alpha = sprite->format->alpha;
[0;1;32m                ~~~~~~~~~~~~~~  ^
[0m1 error generated.
ERROR    root: [31mcompiler frontend failed to generate LLVM bitcode, halting[0m
